Creator Partnership FAQ + Video

--- a/client/index.html
+++ b/client/index.html
@@ -113,7 +113,8 @@
                 <div class="step-card">
                     <div class="step-number">3</div>
                     <h3>Instant app access</h3>
-                    <p>Users unlock tailored programs, macro targets, workout & nutrition trackers, progress tools, and a
+                    <p>Users unlock tailored programs, macro targets, workout & nutrition trackers, progress tools, and
+                        a
                         welcome from you.</p>
                 </div>
             </div>
@@ -157,7 +158,14 @@
         <section class="video" id="video">
             <div class="video-card">
                 <div class="label">Demo video</div>
-                <div class="placeholder">Video coming soon</div>
+
+                <div class="video-wrapper">
+                    <iframe src="https://www.youtube.com/embed/aQdgquIrrh4" title="Creator Partnership Demo Video"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen referrerpolicy="strict-origin-when-cross-origin">
+                    </iframe>
+                </div>
                 <p class="caption">We’ll walk through the full funnel and app experience so you can see exactly what
                     your
                     audience gets.</p>
@@ -278,6 +286,105 @@
                 <!-- Calendly inline widget END -->
             </div>
         </section>
+        <section class="faq" id="faq">
+            <div class="section-header">
+                <p class="eyebrow">Answers at a glance</p>
+                <h2>Frequently asked questions</h2>
+                <p class="lede">Clear, transparent details on how the partnership works and what you can expect.</p>
+            </div>
+            <div class="faq-container">
+                <article class="faq-item">
+                    <button class="faq-question" type="button">How do payouts work? How do I know I’m getting my fair
+                        share?</button>
+                    <div class="faq-answer">
+                        <p>We use Stripe Connect Express to handle all payments. When someone purchases through your
+                            funnel, Stripe automatically splits revenue between us based on your agreed percentage —
+                            instantly. You have your own Stripe dashboard showing live sales, payouts, refunds, and all
+                            transaction data, so there’s zero reliance on us for reporting.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">Will my audience see your brand anywhere?</button>
+                    <div class="faq-answer">
+                        <p>Your brand is front and centre — colors, tone, visuals, domain, offer page, and app UI. The
+                            only necessary mention of us is within the payment processor layer (Stripe/Raising The Bar
+                            Ltd) so transactions are legally compliant. Everything customer-facing sits under your
+                            identity.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">Do I have control over pricing and offers?</button>
+                    <div class="faq-answer">
+                        <p>Absolutely. You choose your pricing structure (subscription, one-time, bundles), and we help
+                            you test and optimize it. We’ll share data-driven recommendations, but final decisions are
+                            yours.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">How fast can we launch?</button>
+                    <div class="faq-answer">
+                        <p>If assets and onboarding questions are ready, you can launch within days. Branding, funnel
+                            adaptation, copy, and app skinning are handled by us — no technical work required on your
+                            end.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">What support do you provide?</button>
+                    <div class="faq-answer">
+                        <p>We handle customer support, technical maintenance, funnel optimization, Stripe and payment
+                            handling, refunds, disputes, and billing issues. You remain involved in vision and
+                            direction, while we take care of the operational headaches.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">What happens if it doesn’t convert?</button>
+                    <div class="faq-answer">
+                        <p>No risk. There are no upfront costs or retainers during launch. If performance isn’t there,
+                            you can walk away. Our incentives are perfectly aligned with yours — we only earn if you do.
+                        </p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">Is it only subscription-based? Can I sell programs
+                        too?</button>
+                    <div class="faq-answer">
+                        <p>Both are supported. You can sell subscriptions, one-time programs, upsells, bundles, or
+                            hybrid models. The funnel, pricing logic, and app access adapt to whichever strategy you
+                            want to run.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">How long do I stay locked in?</button>
+                    <div class="faq-answer">
+                        <p>You’re not locked in. If it’s not the right fit, you can stop anytime after the launch phase.
+                            We want long-term partners — not forced ones.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">What do you need from me?</button>
+                    <div class="faq-answer">
+                        <p>Mainly your brand direction: tone, content style, transformation examples, photos and videos
+                            (optional), and preferences for pricing and audience. We handle the rest — setup, design,
+                            build, funnel logic, onboarding, and optimization.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">Why should I trust you with my brand?</button>
+                    <div class="faq-answer">
+                        <p>Because everything is transparent: Stripe handles all payouts automatically; you see live
+                            revenue; you own your audience; there’s no lock-in; and we’ve already proven funnel
+                            performance with thousands of users. Our success only happens if yours does.</p>
+                    </div>
+                </article>
+                <article class="faq-item">
+                    <button class="faq-question" type="button">Can I test the app first?</button>
+                    <div class="faq-answer">
+                        <p>Yes — you’ll get a full demo walk-through matching your branding, plus a live version you can
+                            click through yourself before making any decisions.</p>
+                    </div>
+                </article>
+            </div>
+        </section>
 
     </main>
 
@@ -286,9 +393,9 @@
         <div class="footer-links">
             <a href="../pages/home.html">Home</a>
             <span class="separator">|</span>
-            <a href="legal-overview.html">Policies</a>
+            <a href="../pages/legal-overview.html">Policies</a>
             <span class="separator">|</span>
-            <a href="contact-us.html">Contact</a>
+            <a href="../pages/contact-us.html">Contact</a>
         </div>
     </footer>
     <script src="../scripts/creator-partnerships.js"></script>
