--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -351,7 +351,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
 
       <p class="small">
         Don’t have a plan yet?
-        <a href="pages/forms.html">Choose a plan here →</a>
+        <a href="forms.html">Choose a plan here →</a>
       </p>
     </div>
   </div>
@@ -410,7 +410,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <section>
     <div class="">
       <div class="cta-container">
-        <a href="pages/forms.html" class="claim-program-btn">Choose a Plan</a>
+        <a href="forms.html" class="claim-program-btn">Choose a Plan</a>
       </div>
       <p class="challenge-line">
         Setup in 60 seconds—no credit card needed.
@@ -575,7 +575,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <div class="dots-container"></div>
 
   <div class="cta-container-subtle">
-    <a href="pages/forms.html" class="claim-program-btn-subtle">Choose a Plan</a>
+    <a href="forms.html" class="claim-program-btn-subtle">Choose a Plan</a>
   </div>
   <section class="youtube-prompt-section">
     <div class="youtube-video-container" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
@@ -633,7 +633,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
     <div class="join-now-prompt">
       <h2>Join now</h2>
       <div class="cta-container">
-        <a href="pages/forms.html" class="claim-program-btn">Choose a Plan</a>
+        <a href="forms.html" class="claim-program-btn">Choose a Plan</a>
       </div>
       <p class="trust-line">
         Built by a small team of lifters, developers, and designers who’ve been exactly where you are.
