Creator Partnership Revenue Terms

--- a/client/index.html
+++ b/client/index.html
@@ -207,7 +207,7 @@
                     <p class="price">After month 1 · creator-favored splits as revenue scales</p>
                     <ul>
                         <li>Performance-based revenue share that rewards growth</li>
-                        <li>Monthly retainer covers maintenance & upgrades</li>
+                        <li>No monthly retainer until you’re earning at higher revenue tiers</li>
                         <li>Ongoing tests for pricing, angles, and retention</li>
                     </ul>
                 </div>
@@ -217,6 +217,70 @@
                 first creator partners to build case studies. If you’d like early terms and hands-on launch support,
                 book a demo call below.
             </p>
+        </section>
+
+        <section class="revenue-share" aria-labelledby="revenue-share-heading">
+            <div class="section-header">
+                <p class="eyebrow">Transparent terms</p>
+                <h2 id="revenue-share-heading">Revenue share after your first month</h2>
+                <p class="lede">Month 1 is always a 50/50 split with no retainer. After that, your share increases, and
+                    a small retainer only applies once you reach the higher revenue tiers.</p>
+            </div>
+
+            <div class="revenue-card">
+                <div class="revenue-note">
+                    Applies from month 2 onward. As results scale, your share increases and ours shrinks.
+                </div>
+                <div class="revenue-table-wrapper">
+                    <table class="revenue-table" aria-label="Revenue share tiers after month one">
+                        <thead>
+                            <tr>
+                                <th scope="col">Monthly total revenue (before split)</th>
+                                <th scope="col">Creator's share</th>
+                                <th scope="col">RTB share</th>
+                                <th scope="col">Monthly retainer</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>£0 – £2,500</td>
+                                <td>65%</td>
+                                <td>35%</td>
+                                <td>£0</td>
+                            </tr>
+                            <tr>
+                                <td>£2,500 – £7,500</td>
+                                <td>70%</td>
+                                <td>30%</td>
+                                <td>£149 / mo</td>
+                            </tr>
+                            <tr>
+                                <td>£7,500 – £15,000</td>
+                                <td>75%</td>
+                                <td>25%</td>
+                                <td>£299 / mo</td>
+                            </tr>
+                            <tr>
+                                <td>£15,000 – £30,000</td>
+                                <td>80%</td>
+                                <td>20%</td>
+                                <td>£399 / mo</td>
+                            </tr>
+                            <tr>
+                                <td>£30,000+</td>
+                                <td>85%</td>
+                                <td>15%</td>
+                                <td>£499 / mo</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <p class="microcopy revenue-footnote">
+                    Revenue tiers are recalculated monthly based on performance. Payouts run through Stripe Connect, so
+                    splits
+                    are applied automatically with full visibility on your dashboard.
+                </p>
+            </div>
         </section>
 
         <section class="cta" id="call-form">
