Creator Partnership Polishes

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
         <section class="hero">
             <div class="hero-content">
                 <p class="eyebrow">
-                    For fitness creators who want their own branded app—without development, customer support, or
+                    For fitness creators who want their own branded app—without handling development, customer support, or
                     operational complexity.
                 </p>
                 <h1>Launch your own premium fitness app in days, not months.</h1>
@@ -187,6 +187,49 @@
             </div>
         </section>
 
+          <section class="testimonials" id="testimonials">
+            <div class="section-header">
+                <p class="eyebrow">Proof from real members</p>
+                <h2>Users feel supported, seen, and ready to keep training</h2>
+                <p class="lede">A few snapshots from people using the app that powers your brand.
+                </p>
+            </div>
+            <div class="testimonial-grid">
+                <article class="testimonial-card">
+                    <p class="testimonial-quote">“The check-ins and adaptive plans keep me accountable. I finally
+                        stopped second-guessing workouts and just show up.”</p>
+                    <div class="testimonial-meta">
+                        <div>
+                            <p class="testimonial-name">Jordan R.</p>
+                            <p class="testimonial-role">Member · 3 months</p>
+                        </div>
+                        <span class="testimonial-badge">Consistent</span>
+                    </div>
+                </article>
+                <article class="testimonial-card">
+                    <p class="testimonial-quote">“The nutrition targets update when my schedule changes. It feels like
+                        the program knows me instead of forcing a template.”</p>
+                    <div class="testimonial-meta">
+                        <div>
+                            <p class="testimonial-name">Priya K.</p>
+                            <p class="testimonial-role">Member · 1 month</p>
+                        </div>
+                        <span class="testimonial-badge">Adaptive</span>
+                    </div>
+                </article>
+                <article class="testimonial-card">
+                    <p class="testimonial-quote">“I joined from TikTok and got my plan in minutes. The app layout is user friendly and super polished.”</p>
+                    <div class="testimonial-meta">
+                        <div>
+                            <p class="testimonial-name">Sam T.</p>
+                            <p class="testimonial-role">New member</p>
+                        </div>
+                        <span class="testimonial-badge">Fast onboarding</span>
+                    </div>
+                </article>
+            </div>
+        </section>
+
         <section class="offer">
             <div class="section-header">
                 <p class="eyebrow">Aligned incentives</p>
@@ -235,7 +278,7 @@
                     <table class="revenue-table" aria-label="Revenue share tiers after month one">
                         <thead>
                             <tr>
-                                <th scope="col">Monthly total revenue (before split)</th>
+                                <th scope="col">Monthly revenue (before split)</th>
                                 <th scope="col">Creator's share</th>
                                 <th scope="col">RTB share</th>
                                 <th scope="col">Monthly retainer</th>
@@ -451,6 +494,16 @@
         </section>
 
     </main>
+
+      <div id="cookie-banner" class="cookie-banner" hidden>
+        <h3>We use cookies to improve your experience</h3>
+        <p>Analytics helps us keep the experience smooth. Choose whether you’re happy for us to use them.
+            You can change this any time in our <a href="/pages/cookie-policy.html">Cookie Policy</a>.</p>
+        <div class="cookie-buttons">
+            <button id="accept-all" class="primary-action" type="button">Accept analytics cookies</button>
+            <button id="deny-all" type="button">Reject analytics cookies</button>
+        </div>
+    </div>
 
     <footer class="footer">
         <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
