--- a/client/pages/offer-decoded.html
+++ b/client/pages/offer-decoded.html
@@ -50,7 +50,7 @@ src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjME
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link href="../styles/offer.css" rel="stylesheet">
+  <link href="../styles/offer-decoded.css" rel="stylesheet">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
   <script>
@@ -107,12 +107,12 @@ src="https://www.paypal.com/sdk/js?client-id=AcygnP6DJSFGbIeyUa2BdGdznCQQk-qXjME
 
 <body class="offer-page">
   <div id="loaderOverlay" class="loader-overlay">
-    <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo" class="loader-logo" />
+    <img src="../assets/decoded-gains-logo.png" alt="GAINS+ logo" class="loader-logo" />
   </div>
   <div class="header">
     <div class="logo">
       <a href="../pages/home.html">
-        <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
+        <img id="logo" class="logo" src="../assets/decoded-gains-logo.png" alt="GAINS+ Logo">
       </a>
     </div>
   </div>
