--- a/client/pages/sign-up-decoded.html
+++ b/client/pages/sign-up-decoded.html
@@ -8,7 +8,7 @@
   <title>Sign up</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
   rel="stylesheet">
-  <link href="../styles/sign-up.css" rel="stylesheet">
+  <link href="../styles/sign-up-decoded.css" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
 <script>
@@ -61,7 +61,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
   <div class="header">
     <div class="logo">
       <a href="../pages/home.html">
-          <img id="logo" class="fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
+          <img id="logo" class="fade-in" src="../assets/decoded-gains-logo.png" alt="GAINS+ Logo">
         </a>
       </div>
     <div class="dark-mode-button">
