Vital Root Demo Forms + Dashboard

--- a/client/pages/dashboard-vital.html
+++ b/client/pages/dashboard-vital.html
@@ -9,19 +9,19 @@
   <!-- Fonts + stylesheets -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="../styles/dashboard.css">
+  <link rel="stylesheet" href="../styles/dashboard-vital.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
   <div id="loaderOverlay" class="loader-overlay">
-    <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo" class="loader-logo" />
+    <img src="../assets/vital-root-logo.png" alt="GAINS+ logo" class="loader-logo" />
   </div>
   <!-- Header / logo -->
   <header class="header">
-    <a href="dashboard.html" class="logo">
-      <img src="../assets/rtb-logo-white.png" alt="Raising The Bar logo">
+    <a href="dashboard-vital.html" class="logo">
+      <img src="../assets/vital-root-logo.png" alt="GAINS+ logo">
     </a>
     <!-- Desktop nav (inline) -->
     <nav class="main-nav" id="main-nav">
@@ -228,7 +228,7 @@
       <p id="ntStatus" class="status"></p>
       <p id="ntStreak" class="streak"></p>
       <p class="nt-subtext"><span class="nt-subtext-emoji">🧠</span> Stay on track without tracking stress.</p>
-      <a href="nutrition-tracker.html" class="cta">Go to Nutrition</a>
+        <a href="nutrition-tracker.html" class="cta">Go to Nutrition</a>
     </article>
 
     <article class="tracker-card" id="mpCard" style="display:none;">
