--- a/client/pages/dashboard-decoded.html
+++ b/client/pages/dashboard-decoded.html
@@ -406,7 +406,7 @@
   </div>
 
   <!-- Logic -->
-  <script src="../scripts/dashboard.js"></script>
+  <script src="../scripts/dashboard-decoded.js"></script>
 </body>
 
 </html>
