--- a/client/pages/forms-decoded.html
+++ b/client/pages/forms-decoded.html
@@ -160,7 +160,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
 
   <!-- <script src="scripts/exercise.js"></script>
   <script src="scripts/meals.js"></script> -->
-  <script type="module" src="../scripts/forms.js"></script>
+  <script type="module" src="../scripts/forms-decoded.js"></script>
   <script type="module">
     import { initCookieBanner } from '../scripts/modules/cookieBanner.js';
     initCookieBanner();
