--- a/client/pages/log-in-decoded.html
+++ b/client/pages/log-in-decoded.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
-  <title>Sign up</title>
+  <title>Log in</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Roboto:wght@400&display=swap"
-  rel="stylesheet">
-  <link href="../styles/sign-up-decoded.css" rel="stylesheet">
-    <!-- Google tag (gtag.js) -->
+    rel="stylesheet">
+    <link href="../styles/log-in-decoded.css" rel="stylesheet">
+      <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W9CSNHSLQQ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -69,75 +69,30 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         height="0px">
     </div>
   </div>
-
-  <div class="signup-container">
-    <div class="signup-box">
-      <h2>Your Plan is Ready</h2>
-      <p class="subheading">
-        Create your account to access everything — workouts, meals, and progress tracking tailored to you.
-      </p>
-  
-      <form id="signup-form" novalidate>
-        <!-- Email -->
+  <div class="login-container">
+    <div class="login-box">
+      <h2>Login</h2>
+      <!-- give the form an ID and disable native action -->
+      <form id="login-form" novalidate>
         <div class="input-group">
-          <label for="email">Email:</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="you@example.com"
-            required
-            aria-describedby="email-error"
-          >
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email" required>
+          <!-- inline error message -->
           <span class="error-message" id="email-error" role="alert"></span>
         </div>
-  
-        <!-- Password -->
+
         <div class="input-group">
-          <label for="password">Password:</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Enter a password"
-            required
-            minlength="8"
-            aria-describedby="password-hint password-error"
-          >
-          <!-- Visible hint + accessible description -->
-          <small id="password-hint" class="hint">Minimum 8 characters</small>
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Enter your password" required>
           <span class="error-message" id="password-error" role="alert"></span>
         </div>
-  
-        <!-- Confirm Password -->
-        <div class="input-group">
-          <label for="confirm-password">Confirm Password:</label>
-          <input
-            type="password"
-            id="confirm-password"
-            name="confirm-password"
-            placeholder="Re-enter your password"
-            required
-            aria-describedby="confirm-error"
-          >
-          <span class="error-message" id="confirm-error" role="alert"></span>
+        <button type="submit" class="login-btn">Continue</button>
+
+        <div class="signup-link">
+          <p>Don't have an account? <a href="forms-decoded.html">Sign up</a></p>
         </div>
-  
-        <button type="submit" class="signup-btn">Claim My Plan</button>
-      </form>
-  
-      <p class="terms">
-        By creating an account, you agree to our
-        <a href="tos.html" target="_blank" rel="noopener">Terms of Service</a>
-        and
-        <a href="privacy-policy.html" target="_blank" rel="noopener">Privacy Policy</a>.
-      </p>
-  
-      <p class="login-link">
-        Already have an account? <a href="log-in.html">Log in</a>
-      </p>
     </div>
-  </div>  
+  </div>
 
   <footer class="footer fade-in" id="footer">
     <div class="footer-content">
@@ -162,8 +117,8 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       </div> -->
     </div>
   </footer>
-  <script type="module" src="../scripts/sign-up-decoded.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script type="module" src="../scripts/log-in-dashboard-decoded.js"></script>
+
 </body>
 
 </html>
