--- a/client/pages/nutrition-tracker-decoded.html
+++ b/client/pages/nutrition-tracker-decoded.html
@@ -5,7 +5,7 @@
   (async function() {
     const token = localStorage.getItem('token');
     if (!token) {
-      location.href = 'log-in-dashboard.html';
+      location.href = 'log-in-decoded.html';
       return;
     }
     try {
@@ -16,7 +16,7 @@
       if (!res.ok) throw new Error();
     } catch (err) {
       localStorage.removeItem('token');
-      location.href = 'log-in-dashboard.html';
+      location.href = 'log-in-decoded.html';
       return;
     }
     // authenticated—rest of the page will load normally
