Fixed WT Summary Colour

--- a/client/pages/offer-decoded.html
+++ b/client/pages/offer-decoded.html
@@ -28,6 +28,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   <title>Claim my plan</title>
+  <script>
+    window.RTB_CREATOR_SLUG = 'decoded';
+  </script>
   <!-- 1️⃣ LOAD the real Stripe SDK first (blocks parsing, 30 ms) -->
   <link rel="preconnect" href="https://js.stripe.com" crossorigin>
   <link rel="preconnect" href="https://api.stripe.com" crossorigin>
