--- a/client/pages/dashboard-vital.html
+++ b/client/pages/dashboard-vital.html
@@ -30,8 +30,8 @@
 
       <ul>
         <!-- <li><a href="dashboard.html">My Dashboard</a></li> -->
-        <li><a href="workout-tracker.html" id="nav-workouts">My Workouts</a></li>
-        <li><a href="nutrition-tracker.html" id="nav-nutrition">My Nutrition</a></li>
+        <li><a href="workout-tracker-vital.html" id="nav-workouts">My Workouts</a></li>
+        <li><a href="nutrition-tracker-vital.html" id="nav-nutrition">My Nutrition</a></li>
         <li><a href="#" id="nav-help">Help</a></li>
       </ul>
     </nav>
@@ -218,7 +218,7 @@
       <h2>My Workouts</h2>
       <p id="wtStatus" class="status"></p>
       <p id="wtStreak" class="streak"></p>
-      <a href="workout-tracker.html" class="cta">Go to Workouts</a>
+      <a href="workout-tracker-vital.html" class="cta">Go to Workouts</a>
     </article>
 
     <!-- Nutrition -->
@@ -228,7 +228,7 @@
       <p id="ntStatus" class="status"></p>
       <p id="ntStreak" class="streak"></p>
       <p class="nt-subtext"><span class="nt-subtext-emoji">🧠</span> Stay on track without tracking stress.</p>
-        <a href="nutrition-tracker.html" class="cta">Go to Nutrition</a>
+        <a href="nutrition-tracker-vital.html" class="cta">Go to Nutrition</a>
     </article>
 
     <article class="tracker-card" id="mpCard" style="display:none;">
@@ -406,7 +406,7 @@
   </div>
 
   <!-- Logic -->
-  <script src="../scripts/dashboard.js"></script>
+  <script src="../scripts/dashboard-vital.js"></script>
 </body>
 
 </html>
