--- a/client/pages/nutrition-tracker-decoded.html
+++ b/client/pages/nutrition-tracker-decoded.html
@@ -472,6 +472,7 @@ src="https://www.facebook.com/tr?id=2589073464764526&ev=PageView&noscript=1"
   <!-- Footer -->
   <footer class="footer fade-in" id="footer">
     <div class="footer-content">
+            <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
         <a href="home.html">Start Training</a>
