--- a/client/pages/dashboard-decoded.html
+++ b/client/pages/dashboard-decoded.html
@@ -261,6 +261,7 @@
   <!-- Footer (same as NT) -->
   <footer class="footer fade-in" id="footer">
     <div class="footer-content">
+            <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
         <a href="home.html">Start Training</a>
