--- a/client/pages/offer-decoded.html
+++ b/client/pages/offer-decoded.html
@@ -274,7 +274,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <!-- left leaf -->
 
         <h3 class="asp-headline">
-          <span class="asp-number">10&nbsp;Million+</span>
+          <span class="asp-number">10,000+</span>
           <br>
           kick‑started their journey with us
         </h3>
@@ -291,7 +291,7 @@ so it doesn't appear above the 1st item or below the last item. -->
         <img src="../assets/google-play.png" alt="Google Play" loading="lazy">
       </div>
 
-      <p class="asp-reviews">250&nbsp;000+ five‑star reviews from happy users</p>
+      <p class="asp-reviews">2,500+ five‑star reviews from happy users</p>
     </div>
   </section>
 
@@ -422,14 +422,14 @@ placeholder.replaceWith(iframe);
         <span class="discount-label">Discount Expires In:</span>
         <span class="time-remaining" id="countdownTimer">10:00</span>
       </div>
-      <p class="first-1000">🔥 2,000+ claimed their plan today. You're next</p>
+      <p class="first-1000">🔥 82 claimed their plan today. You're next</p>
     </div>
 
     <!-- Offer Cards -->
     <section id="socialProof" class="social-proof">
       <img src="../assets/muscular-silhouette.webp" alt="Coach silhouette" class="social-proof__coach" />
       <p class="social-proof__headline">
-        947 people bought workout plans in the last hour
+        17 people bought workout plans in the last hour
       </p>
       <div class="social-proof__recent">
         <span class="social-proof__tag">ava 12-Week Plan</span>
@@ -489,7 +489,7 @@ placeholder.replaceWith(iframe);
           <span class="rating-summary__stars-base" aria-hidden="true">★★★★★</span>
         </div>
         <div class="rating-summary__score">
-          <strong>4.8/5</strong> (312,143 reviews)
+          <strong>4.8/5</strong> (2,574 reviews)
         </div>
       </div>
 
@@ -902,7 +902,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
         </div>
         <div class="reviews-hero__meta">
           <p class="reviews-hero__headline">4.8 out of 5</p>
-          <p class="reviews-hero__sub">Based on 312,143 reviews verified purchases</p>
+          <p class="reviews-hero__sub">Based on 2,574 reviews verified purchases</p>
         </div>
       </div>
       <ul class="reviews-breakdown" aria-label="Rating distribution">
@@ -991,6 +991,7 @@ alert('Could not initialise PayPal. Please refresh and try again.');
 
   <footer class="footer " id="footer">
     <div class="footer-content">
+      <p class="powered">POWERED BY</p>
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
         <a href="home.html">Start Training</a>
